// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metadata rendering 1`] = `
<DocumentFragment>
  <span
    data-component="HelmetWrapper"
    data-props="{
  \\"htmlAttributes\\": {}
}"
  >
    <title>
      Regexper
    </title>
  </span>
</DocumentFragment>
`;

exports[`Metadata rendering with a title and description 1`] = `
<DocumentFragment>
  <span
    data-component="HelmetWrapper"
    data-props="{
  \\"htmlAttributes\\": {}
}"
  >
    <title>
      Regexper - Testing
    </title>
    <meta
      content="Test description"
      name="description"
    />
  </span>
</DocumentFragment>
`;
